--- a/src/app/modules/admin/components/header/header.component.html
+++ b/src/app/modules/admin/components/header/header.component.html
@@ -9,7 +9,7 @@
       <mat-icon>menu</mat-icon>
     </button>
     <span>Dmantz</span>
-    <div class="form-check form-switch" (change)='setThemeControlss($event.target)' [ngModel]="storedTheme"
+    <div class="form-check form-switch" (change)='setThemeControlss($event.target)'
       style="margin-left: 20px;">
       <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" checked >
 
